--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 
-###> symfony/framework-bundle ###
+
 /.env.local
 /.env.*.local
 /public/bundles/
 /var/
 /vendor/
+.env
+.idea/
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
@@ -15,5 +17,7 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
-.idea/
-.env/
+
+
+Supprimerait .env
+
